rest-mvc: corrige testes